--- a/HTML forms--this folder should be moved/Oncology Visit form v2017-11-23.html
+++ b/HTML forms--this folder should be moved/Oncology Visit form v2017-11-23.html
@@ -330,7 +330,7 @@
                 <td><b>Plt</b></td>
                 <td><b>Cr</b></td>
                 <td><b>Other tests(specify)</b></td>
-                <td><b>Next outpatient visit date</b></td>
+               
 
             </tr>
             <tr>
@@ -377,7 +377,7 @@
                     <obs conceptId="3ce1ca8a-26fe-102b-80cb-0017a47871b2"
                          labelText="Result" /></obsgroup>
                 </td>
-                <td><obs conceptId="a7aa7d20-3520-4d8a-9324-f7b8f6a3b109" allowFutureDates="true"/><br /></td>
+                
 
 
             </tr>
@@ -489,6 +489,8 @@
                         <td colspan="3"><span><b>Plan</b></span><br />
                             <obs conceptId="$@PATIENT_PLAN_COMMENTS@" cols="150"/>
 
+                            <br/>
+                            Next outpatient clinic visit <obs conceptId="a7aa7d20-3520-4d8a-9324-f7b8f6a3b109" allowFutureDates="true"/><br />
                             <br/>
                             <span >Complete ‘Exit Program’ form if patient is exiting from oncology program</span>
                         <br /><br /><span> **Complete another ‘DST’ form if there’s change in disease stage or tx intent</span>
